@@ -39,7 +39,8 @@ void get_seq()
 void random_seqs()
 {
 	DatabaseFile db_file;
-	db_file.load_seqs(Metadata());
+	vector<unsigned> v;
+	db_file.load_seqs(Metadata(), v);
 	cout << "Sequences = " << ref_seqs::get().get_length() << endl;
 	std::set<unsigned> n;
 	const size_t count = atoi(config.seq_no[0].c_str());
@@ -81,7 +82,8 @@ void sort_file()
 void db_stat()
 {
 	DatabaseFile db_file;
-	db_file.load_seqs(Metadata());
+	vector<unsigned> v;
+	db_file.load_seqs(Metadata(), v);
 	cout << "Sequences = " << ref_seqs::get().get_length() << endl;
 
 	size_t letters = 0;
@@ -158,7 +160,8 @@ void test_io()
 		total += buf_size;*/
 
 	DatabaseFile db;
-	db.load_seqs(Metadata());
+	vector<unsigned> v;
+	db.load_seqs(Metadata(), v);
 
 	size_t total = ref_seqs::get().raw_len() + ref_ids::get().raw_len();
 	cout << "MBytes/sec = " << total / 1e6 / t.getElapsedTime() << endl;
