@@ -1,6 +1,8 @@
 [0.9.19]
 - Fixed a bug in the --un function to write unaligned reads.
 - Fixed an issue in the LCA algorithm that could cause an assignment to a higher node.
+- --taxonmap and --taxonnodes parameters now apply exclusively to the makedb command.
+- Added option --taxonlist to filter searches by subject taxonomic id.
 
 [0.9.18]
 - Optimized output writing performance.
